ExprParser.py
# Generated from ExprParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "ExprParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ediwow'", "'edi'", "'ediAno'", "'weh'", 
                     "'sakalam'", "'buhat'", "'uwianNa'", "'lods'", "'charot'", 
                     "'padayon'", "'forever'", "'bilang'", "'dobols'", "'emoji'", 
                     "'tsismis'", "<INVALID>", "'waley'", "'dagdag'", "'bawas'", 
                     "'dobolDobol'", "'hati'", "'sobra'", "'etoNaLods'", 
                     "'parehasLods'", "'diParehasLods'", "'masGamay'", "'masDako'", 
                     "'saktoGamay'", "'saktoDako'", "'++'", "'--'", "<INVALID>", 
                     "<INVALID>", "'dili'", "'('", "')'", "'{'", "'}'", 
                     "';'", "','", "'&'", "'*'", "'ngutana'", "'yawit'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "ELSEIF", "WHILE", "FOR", 
                      "FUNCTION", "RETURN", "VAR", "BREAK", "CONTINUE", 
                      "CONST", "KW_INT", "KW_DOUBLE", "KW_CHAR", "KW_STRING", 
                      "BOOLEAN_LITERAL", "NULL_LITERAL", "PLUS", "MINUS", 
                      "MULT", "DIV", "MODULO", "ASSIGN", "EQ", "NEQ", "LT", 
                      "GT", "LEQ", "GEQ", "INCREMENT", "DECREMENT", "AND", 
                      "OR", "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "SEMICOLON", "COMMA", "REFERENCE", "DEREFERENCE", 
                      "READ", "PRINT", "FLOAT", "INTEGER", "STRING", "CHAR", 
                      "IDENTIFIER", "LINE_COMMENT", "BLOCK_COMMENT", "WS", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_vardecl = 2
    RULE_assignment = 3
    RULE_incDecStmt = 4
    RULE_assignmentNoSemicolon = 5
    RULE_typedVarDecl = 6
    RULE_printStmt = 7
    RULE_ifStmt = 8
    RULE_whileStmt = 9
    RULE_forStmt = 10
    RULE_funcDecl = 11
    RULE_funcCall = 12
    RULE_expression = 13
    RULE_dataType = 14
    RULE_literal = 15
    RULE_paramList = 16
    RULE_argList = 17
    RULE_block = 18

    ruleNames =  [ "program", "statement", "vardecl", "assignment", "incDecStmt", 
                   "assignmentNoSemicolon", "typedVarDecl", "printStmt", 
                   "ifStmt", "whileStmt", "forStmt", "funcDecl", "funcCall", 
                   "expression", "dataType", "literal", "paramList", "argList", 
                   "block" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    ELSEIF=3
    WHILE=4
    FOR=5
    FUNCTION=6
    RETURN=7
    VAR=8
    BREAK=9
    CONTINUE=10
    CONST=11
    KW_INT=12
    KW_DOUBLE=13
    KW_CHAR=14
    KW_STRING=15
    BOOLEAN_LITERAL=16
    NULL_LITERAL=17
    PLUS=18
    MINUS=19
    MULT=20
    DIV=21
    MODULO=22
    ASSIGN=23
    EQ=24
    NEQ=25
    LT=26
    GT=27
    LEQ=28
    GEQ=29
    INCREMENT=30
    DECREMENT=31
    AND=32
    OR=33
    NOT=34
    LPAREN=35
    RPAREN=36
    LBRACE=37
    RBRACE=38
    SEMICOLON=39
    COMMA=40
    REFERENCE=41
    DEREFERENCE=42
    READ=43
    PRINT=44
    FLOAT=45
    INTEGER=46
    STRING=47
    CHAR=48
    IDENTIFIER=49
    LINE_COMMENT=50
    BLOCK_COMMENT=51
    WS=52
    ERROR_CHAR=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 580542139467762) != 0):
                self.state = 38
                self.statement()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(ExprParser.VardeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ExprParser.AssignmentContext,0)


        def incDecStmt(self):
            return self.getTypedRuleContext(ExprParser.IncDecStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(ExprParser.PrintStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ExprParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(ExprParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(ExprParser.ForStmtContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(ExprParser.FuncDeclContext,0)


        def funcCall(self):
            return self.getTypedRuleContext(ExprParser.FuncCallContext,0)


        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def RETURN(self):
            return self.getToken(ExprParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def BREAK(self):
            return self.getToken(ExprParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(ExprParser.CONTINUE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = ExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.incDecStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.printStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.ifStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.whileStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.forStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 53
                self.funcDecl()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 54
                self.funcCall()
                self.state = 55
                self.match(ExprParser.SEMICOLON)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 57
                self.match(ExprParser.RETURN)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1090767074557952) != 0):
                    self.state = 58
                    self.expression(0)


                self.state = 61
                self.match(ExprParser.SEMICOLON)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 62
                self.match(ExprParser.BREAK)
                self.state = 63
                self.match(ExprParser.SEMICOLON)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 64
                self.match(ExprParser.CONTINUE)
                self.state = 65
                self.match(ExprParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ExprParser.VAR, 0)

        def dataType(self):
            return self.getTypedRuleContext(ExprParser.DataTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def ASSIGN(self):
            return self.getToken(ExprParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_vardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl" ):
                listener.enterVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl" ):
                listener.exitVardecl(self)




    def vardecl(self):

        localctx = ExprParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ExprParser.VAR)
            self.state = 69
            self.dataType()
            self.state = 70
            self.match(ExprParser.IDENTIFIER)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 71
                self.match(ExprParser.ASSIGN)
                self.state = 72
                self.expression(0)


            self.state = 75
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(ExprParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = ExprParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ExprParser.IDENTIFIER)
            self.state = 78
            self.match(ExprParser.ASSIGN)
            self.state = 79
            self.expression(0)
            self.state = 80
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncDecStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def INCREMENT(self):
            return self.getToken(ExprParser.INCREMENT, 0)

        def DECREMENT(self):
            return self.getToken(ExprParser.DECREMENT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_incDecStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncDecStmt" ):
                listener.enterIncDecStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncDecStmt" ):
                listener.exitIncDecStmt(self)




    def incDecStmt(self):

        localctx = ExprParser.IncDecStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_incDecStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 82
                self.match(ExprParser.IDENTIFIER)
                self.state = 83
                self.match(ExprParser.INCREMENT)
                pass

            elif la_ == 2:
                self.state = 84
                self.match(ExprParser.IDENTIFIER)
                self.state = 85
                self.match(ExprParser.DECREMENT)
                pass


            self.state = 88
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentNoSemicolonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(ExprParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_assignmentNoSemicolon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentNoSemicolon" ):
                listener.enterAssignmentNoSemicolon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentNoSemicolon" ):
                listener.exitAssignmentNoSemicolon(self)




    def assignmentNoSemicolon(self):

        localctx = ExprParser.AssignmentNoSemicolonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignmentNoSemicolon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(ExprParser.IDENTIFIER)
            self.state = 91
            self.match(ExprParser.ASSIGN)
            self.state = 92
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedVarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(ExprParser.DataTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(ExprParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_typedVarDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedVarDecl" ):
                listener.enterTypedVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedVarDecl" ):
                listener.exitTypedVarDecl(self)




    def typedVarDecl(self):

        localctx = ExprParser.TypedVarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typedVarDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.dataType()
            self.state = 95
            self.match(ExprParser.IDENTIFIER)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 96
                self.match(ExprParser.ASSIGN)
                self.state = 97
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(ExprParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)




    def printStmt(self):

        localctx = ExprParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ExprParser.PRINT)
            self.state = 101
            self.expression(0)
            self.state = 102
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ExprParser.IF, 0)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.LPAREN)
            else:
                return self.getToken(ExprParser.LPAREN, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExpressionContext,i)


        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.RPAREN)
            else:
                return self.getToken(ExprParser.RPAREN, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.BlockContext)
            else:
                return self.getTypedRuleContext(ExprParser.BlockContext,i)


        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ELSEIF)
            else:
                return self.getToken(ExprParser.ELSEIF, i)

        def ELSE(self):
            return self.getToken(ExprParser.ELSE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = ExprParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(ExprParser.IF)
            self.state = 105
            self.match(ExprParser.LPAREN)
            self.state = 106
            self.expression(0)
            self.state = 107
            self.match(ExprParser.RPAREN)
            self.state = 108
            self.block()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 109
                self.match(ExprParser.ELSEIF)
                self.state = 110
                self.match(ExprParser.LPAREN)
                self.state = 111
                self.expression(0)
                self.state = 112
                self.match(ExprParser.RPAREN)
                self.state = 113
                self.block()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 120
                self.match(ExprParser.ELSE)
                self.state = 121
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ExprParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)




    def whileStmt(self):

        localctx = ExprParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ExprParser.WHILE)
            self.state = 125
            self.match(ExprParser.LPAREN)
            self.state = 126
            self.expression(0)
            self.state = 127
            self.match(ExprParser.RPAREN)
            self.state = 128
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(ExprParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.SEMICOLON)
            else:
                return self.getToken(ExprParser.SEMICOLON, i)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(ExprParser.VardeclContext,0)


        def typedVarDecl(self):
            return self.getTypedRuleContext(ExprParser.TypedVarDeclContext,0)


        def assignmentNoSemicolon(self):
            return self.getTypedRuleContext(ExprParser.AssignmentNoSemicolonContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExpressionContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)




    def forStmt(self):

        localctx = ExprParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(ExprParser.FOR)
            self.state = 131
            self.match(ExprParser.LPAREN)
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.state = 132
                self.vardecl()
                pass
            elif token in [12, 13, 14, 15]:
                self.state = 133
                self.typedVarDecl()
                pass
            elif token in [49]:
                self.state = 134
                self.assignmentNoSemicolon()
                pass
            elif token in [39]:
                pass
            else:
                pass
            self.state = 137
            self.match(ExprParser.SEMICOLON)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1090767074557952) != 0):
                self.state = 138
                self.expression(0)


            self.state = 141
            self.match(ExprParser.SEMICOLON)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1090767074557952) != 0):
                self.state = 142
                self.expression(0)


            self.state = 145
            self.match(ExprParser.RPAREN)
            self.state = 146
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ExprParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(ExprParser.ParamListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)




    def funcDecl(self):

        localctx = ExprParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(ExprParser.FUNCTION)
            self.state = 149
            self.match(ExprParser.IDENTIFIER)
            self.state = 150
            self.match(ExprParser.LPAREN)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0):
                self.state = 151
                self.paramList()


            self.state = 154
            self.match(ExprParser.RPAREN)
            self.state = 155
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def argList(self):
            return self.getTypedRuleContext(ExprParser.ArgListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_funcCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCall" ):
                listener.enterFuncCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCall" ):
                listener.exitFuncCall(self)




    def funcCall(self):

        localctx = ExprParser.FuncCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(ExprParser.IDENTIFIER)
            self.state = 158
            self.match(ExprParser.LPAREN)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1090767074557952) != 0):
                self.state = 159
                self.argList()


            self.state = 162
